<resources>
    <string name="app_name">OraChat</string>

    <!-- account -->
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>

    <string name="name_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_hint">Confirm</string>

    <string name="registration_error">There was an error trying to register.</string>
    <string name="login_error">There was an error attempting to login.</string>
    <string name="email_error">Enter a valid email</string>
    <string name="name_error">Name is required</string>
    <string name="password_error">Must be at least 6 characters</string>
    <string name="confirm_error">Password does not match</string>
    <string name="generic_error">Oops, something went wrong!</string>

    <!-- chat -->
    <string name="chat">Chat</string>
    <string name="account">Account</string>

    <string name="new_chat">New Chat</string>
    <string name="edit_chat_name">Edit chat name</string>

    <string name="apply">Apply</string>
    <string name="send">Send</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>

    <string name="share">Share</string>
    <string name="copy">Copy text</string>
    <string name="copy_complete">Copied!</string>
    <string name="delete">Delete</string>
    <string name="delete_title">Delete this message?</string>
    <string name="delete_message">This action cannot be undone.</string>


    <string name="chat_item_name">%1$s by %2$s</string>
    <string name="chat_message_timestamp">%1$s - %2$s</string>
    <string name="chat_message_hint">Write something…</string>

    <string name="today">Today</string>
    <string name="now">Now</string>
    
    <plurals name="seconds_suffix">
        <item quantity="one">1 sec ago</item>
        <item quantity="other">%d secs ago</item>
    </plurals>
    
    <plurals name="minutes_suffix">
        <item quantity="one">1 min ago</item>
        <item quantity="other">%d mins ago</item>
    </plurals>

    <plurals name="hours_suffix">
        <item quantity="one">1 hour ago</item>
        <item quantity="other">%d hours ago</item>
    </plurals>

    <plurals name="days_suffix">
        <item quantity="one">1 day ago</item>
        <item quantity="other">%d days ago</item>
    </plurals>

    <plurals name="months_suffix">
        <item quantity="one">1 month ago</item>
        <item quantity="other">%d months ago</item>
    </plurals>

    <plurals name="years_suffix">
        <item quantity="one">1 year ago</item>
        <item quantity="other">%d years ago</item>
    </plurals>
</resources>
